weasis-dicom-tools/src/test/resources/simplelogger.properties
# SLF4J Simple configuration for the test classpath.
#
# Two purposes:
#   1. Send all log output to stdout (default is stderr), so Surefire does not
#      render expected-error log lines from negative-path tests in red.
#   2. Silence production loggers whose error paths are exercised by tests
#      whose assertions already prove the behaviour. Other loggers stay at the
#      default WARN level so a genuinely unexpected log line still surfaces.
#
# Production behaviour is untouched: this file is only on the test classpath.

org.slf4j.simpleLogger.logFile=System.out
org.slf4j.simpleLogger.defaultLogLevel=warn
org.slf4j.simpleLogger.showDateTime=false
org.slf4j.simpleLogger.showThreadName=false
org.slf4j.simpleLogger.showShortLogName=true
org.slf4j.simpleLogger.levelInBrackets=true

# Loggers below are deliberately tripped by negative-path tests
# (corrupted input, null arguments, malformed DICOM, etc.). The tests assert
# the observable contract; the log emission itself is not part of the
# contract under verification.
org.slf4j.simpleLogger.log.org.dcm4che3.img.util.DicomUtils=off
org.slf4j.simpleLogger.log.org.dcm4che3.tool.storescu.StoreSCU=off
org.slf4j.simpleLogger.log.org.weasis.dicom.web.MultipartBody=off
org.slf4j.simpleLogger.log.org.weasis.dicom.web.MultipartReader=off